--- a/pages/ideasNegociosADomicilio.html
+++ b/pages/ideasNegociosADomicilio.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Atma&family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/estilos.css">
     <title>PMApp - Ideas de negocios a domicilio</title>
 </head>
@@ -56,6 +57,7 @@
         </div>
     </div>            
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
 
